# potluck

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.ci.yaml  docker-compose.yaml  heroku.yml  manage.py  package-lock.json  package.json  pyproject.toml  setup.cfg  tailwind.config.js
.github/workflows/: actions-demo.yml  build-with-caching.yml  ci-sequential.yml  ci.yml  create-and-publish-image.yml
potluck/: asgi.py  settings.py  urls.py  wsgi.py
potluck/games/: admin.py  apps.py  factories.py  forms.py  models.py  urls.py  validators.py  views.py
potluck/games/migrations/: 0001_add_game_model.py  0002_add_winning_team_field.py  0003_add_pot_fk_to_game.py  0004_game_non_blank.py  0005_game_is_tie.py  0006_home_and_away_team.py  0007_remove_game_teams.py
potluck/games/tests/: factories.py  test_factories.py  test_forms.py  test_models.py  test_validators.py  test_views.py
potluck/home/: apps.py  urls.py
potluck/picks/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
potluck/picks/migrations/: 0001_initial.py  0002_add_pick_model.py  0003_auto_20210523_2221.py  0004_rename_game_pick_model.py  0005_rename_pick_to_picksheet.py  0006_rename_gamepicktemp_to_pick.py  0007_rename_pick_pick_to_pick_picksheet.py  0008_rename_game_pick_relation_on_game_and_pick_sheet.py  0009_rename_pot_picks_to_pot_picksheets.py  0010_pick_sheet_picker_help_text.py  0011_picksheet_tiebreaker_guess.py  0012_pick_sheet_help_text.py  0013_update_pick_sheet_tiebreaker_guess_help_text.py
potluck/pots/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
potluck/settings/: base.py  test.py
potluck/teams/: admin.py  apps.py  models.py
potluck/templates/: base.html  base_page.html
(+74 files in other folders)
