[tool.poetry]
name = "potluck"
version = "0.1.0"
description = "Web app to pick winning teams in a set of games and take home the pot."
authors = ["Tibor Leupold <tibor@lpld.io>"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.4"
whitenoise = "^5.2.0"
python-dotenv = "^0.16.0"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-django = "^4.1.0"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
factory-boy = "^3.2.0"
mypy = "^0.812"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "potluck.settings.test"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
